--- a/plugin.xml
+++ b/plugin.xml
@@ -5,6 +5,9 @@
         <description>Mobione Phoneui Framework</description>
         <license>Apache 2.0</license>
         <author>Genuitec LLC</author>
+
+        <repo>https://github.com/genuitec-mobione/mobione-plugin.git</repo>
+
         
         <keywords>mobione,phoneui</keywords>
         
@@ -27,4 +30,86 @@
             
             <framework src="MediaPlayer.framework" weak="true" />
         </platform>
+
+        <platform name="android">
+            <config-file target="res/values/strings.xml" parent="/*">
+                <string name="start_page">index.html</string>
+            </config-file>
+            
+            <config-file target="res/xml/config.xml" parent="/*">
+                <feature name="MobiOne" >
+                    <param name="android-package" value="com.genuitec.mobione.android.MobiOnePlugin"/>
+                    <param name="onload" value="true" />
+                </feature>
+                
+                <feature name="Viewer" >
+                    <param name="android-package" value="com.phonegap.plugins.file.Viewer"/>
+                    <param name="onload" value="true" />
+                </feature>
+                
+                <feature name="Downloader" >
+                    <param name="android-package" value="com.phonegap.plugins.downloader.Downloader"/>
+                    <param name="onload" value="true" />
+                </feature>
+            </config-file>
+
+            <config-file target="AndroidManifest.xml" parent="/manifest/application">
+
+                <!-- <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" /> -->
+
+                <activity
+                    android:name="com.genuitec.mobione.build.template.android.Main"
+                    android:configChanges="orientation|keyboardHidden"
+                    android:label="AndroidTemplate"
+                    android:screenOrientation="unspecified" >
+                    <intent-filter>
+                        <action android:name="android.intent.action.MAIN" />
+
+                        <category android:name="android.intent.category.LAUNCHER" />
+                    </intent-filter>
+                </activity>
+                <activity
+                    android:name="com.genuitec.mobione.android.PlayVideoActivity"
+                    android:configChanges="orientation|keyboardHidden"
+                    android:label="AndroidTemplate"
+                    android:screenOrientation="unspecified" 
+                    android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+                    <intent-filter>
+                    </intent-filter>
+                </activity>
+                
+                <activity 
+                    android:name="com.phonegap.plugins.pdf.ProxyActivity"
+                    android:configChanges="orientation|keyboardHidden"
+                    android:label="AndroidTemplate"
+                    android:screenOrientation="unspecified" >
+                   <intent-filter>
+                    </intent-filter>             
+                </activity>
+
+
+            </config-file>
+
+
+
+            <source-file src="src/android/com/genuitec/mobione/android/MobiOnePlugin.java" 
+                  target-dir="src/com/genuitec/mobione/android/" />
+
+            <source-file src="src/android/com/genuitec/mobione/android/PlayVideoActivity.java" 
+                  target-dir="src/com/genuitec/mobione/android/" />
+
+            <source-file src="src/android/com/genuitec/mobione/build/template/android/Main.java" 
+                  target-dir="src/com/genuitec/mobione/build/template/android/" />
+
+            <source-file src="src/android/com/phonegap/plugins/downloader/Downloader.java" 
+                  target-dir="src/com/phonegap/plugins/downloader/" />
+
+            <source-file src="src/android/com/phonegap/plugins/file/Viewer.java" 
+                  target-dir="src/com/phonegap/plugins/file/" />
+
+            
+            
+        </platform>
+        
+
 </plugin>
