--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+        xmlns:android="http://schemas.android.com/apk/res/android"
             id="com.genuitec.mobione.phoneui" version="0.2.5">
         <name>Mobione</name>
         <description>Mobione Phoneui Framework</description>
